<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aed6f1">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weathertrack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="12dp"
        android:fontFamily="@font/lato_black"
        android:textColor="@android:color/black" />

    <!-- Current Weather Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/currentWeatherCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Refresh Icon -->
            <LinearLayout
                android:id="@+id/currentInfoLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvCurrentTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="26°C"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="46sp" />
                <ImageView
                    android:id="@+id/ivRefresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/refresh"
                    android:src="@drawable/refresh_icon" />
            </FrameLayout>



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tvCurrentDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today: May 31"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="@font/lato_regular"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="3"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:src="@drawable/humidity_svg"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/humidity_icon"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/tvCurrentHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Humidity"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/tv1CurrentHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="3dp"
                        android:text="45%" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/condition_icon"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/cloudy_day_svg" />

                    <TextView
                        android:id="@+id/tvCurrentCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:text="Condition"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv1CurrentCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:text="Partly Cloudy"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="3dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:src="@drawable/wind"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/wind_icon"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/tvCurrentWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:fontFamily="@font/lato_regular"
                        android:text="Wind"/>

                    <TextView
                        android:id="@+id/tv1CurrentWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:fontFamily="@font/lato_regular"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="2dp"
                        android:text="16 km/h"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tvDetailTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Last updated: 6:00 AM"/>
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Weekly Summary Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weekly Trends"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"/>

    <!-- Weekly Summary List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWeather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
